--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,20 +1,27 @@
+<mat-toolbar color="primary">
+  <button mat-icon-button (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
+
+  <span>Fuel Station Manager</span>
+
+  <span class="spacer"></span>
+
+
+  <app-notification [notifications]="notifications$"></app-notification>
+  <div class="theme-toggle">
+    <button mat-icon-button (click)="toggleTheme()" aria-label="Toggle theme">
+      <mat-icon >{{ isDarkMode ? 'dark_mode' : 'light_mode' }}</mat-icon>
+    </button>
+  </div>
+</mat-toolbar>
 <mat-sidenav-container class="layout">
   <mat-sidenav #sidenav mode="side" class="sidebar">
     <app-sidebar></app-sidebar>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <mat-toolbar color="primary">
-      <button mat-icon-button (click)="sidenav.toggle()">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <span>Fuel Station Manager</span>
 
-      <span class="spacer"></span>
-
-
-      <app-notification [notifications]="notifications"></app-notification>
-    </mat-toolbar>
     <main class="layout__main">
       <router-outlet></router-outlet>
     </main>
