--- a/src/app/products/components/update-form/update-form.component.html
+++ b/src/app/products/components/update-form/update-form.component.html
@@ -2,21 +2,60 @@
   <mat-form-field appearance="outline">
     <mat-label>Name</mat-label>
     <input matInput formControlName="name" />
+    <mat-error *ngIf="productForm.get('name')?.hasError('required')">
+      Name is required.
+    </mat-error>
   </mat-form-field>
+
   <mat-form-field appearance="outline">
     <mat-label>Category</mat-label>
     <input matInput formControlName="category" />
+    <mat-error *ngIf="productForm.get('category')?.hasError('required')">
+      Category is required.
+    </mat-error>
   </mat-form-field>
+
   <mat-form-field appearance="outline">
     <mat-label>Price</mat-label>
     <input matInput type="number" formControlName="price" />
+    <mat-error *ngIf="productForm.get('price')?.hasError('required')">
+      Price is required.
+    </mat-error>
+    <mat-error *ngIf="productForm.get('price')?.hasError('min')">
+      Price must be at least 0.
+    </mat-error>
   </mat-form-field>
+
   <mat-form-field appearance="outline">
     <mat-label>Stock</mat-label>
     <input matInput type="number" formControlName="stock" />
+    <mat-error *ngIf="productForm.get('stock')?.hasError('required')">
+      Stock is required.
+    </mat-error>
+    <mat-error *ngIf="productForm.get('stock')?.hasError('min')">
+      Stock must be at least 0.
+    </mat-error>
   </mat-form-field>
+
   <mat-form-field appearance="outline">
     <mat-label>Reorder Point</mat-label>
     <input matInput type="number" formControlName="reorderPoint" />
+    <mat-error *ngIf="productForm.get('reorderPoint')?.hasError('required')">
+      Reorder Point is required.
+    </mat-error>
+    <mat-error *ngIf="productForm.get('reorderPoint')?.hasError('min')">
+      Reorder Point must be at least 0.
+    </mat-error>
+  </mat-form-field>
+
+  <mat-form-field appearance="outline">
+    <mat-label>Expiry Date</mat-label>
+    <input matInput type="date" formControlName="expiryDate" />
+    <mat-error *ngIf="productForm.get('expiryDate')?.hasError('required')">
+      Expiry Date is required.
+    </mat-error>
+    <mat-error *ngIf="productForm.get('expiryDate')?.hasError('invalidDate')">
+      Expiry Date must be a valid future date.
+    </mat-error>
   </mat-form-field>
 </form>
