--- a/src/app/shared/components/notification/notification.component.html
+++ b/src/app/shared/components/notification/notification.component.html
@@ -2,18 +2,16 @@
   <button
     mat-icon-button
     [matMenuTriggerFor]="notificationMenu"
-    matBadge="{{ notifications.length }}"
+    matBadge="{{ (notifications| async)!.length }}"
     matBadgeColor="warn"
   >
     <mat-icon>notifications</mat-icon>
   </button>
   <mat-menu #notificationMenu="matMenu">
-    <ng-container *ngIf="notifications.length > 0; else noNotifications">
-      <button mat-menu-item *ngFor="let notification of notifications">
-        <a [href]="['/products/'+ notification.productId]" class="notification-link"
-          ><mat-icon>warning</mat-icon> <span>{{ notification.text }}</span></a
-        >
-      </button>
+    <ng-container *ngIf="(notifications | async)!.length > 0; else noNotifications">
+      <button mat-menu-item *ngFor="let notification of notifications | async" (click)="handeNotificationClick(notification.productId)" class="notification-link" >
+          <mat-icon>warning</mat-icon> <span>{{ notification.text }}</span>
+        </button>
       <button mat-menu-item (click)="clearNotifications()">
         <mat-icon>clear_all</mat-icon>
         <span>Clear Notifications</span>
