--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,6 +1,8 @@
 <div class="user-management">
   <h1>User Management</h1>
-  <button mat-raised-button color="primary" (click)="openAddUserModal()">Add User</button>
+  <div class="table-button-container">
+    <button *appHasPermission="'AddUsers'" mat-raised-button color="primary" (click)="openAddUserModal()">Add User</button>
+  </div>
   <table mat-table [dataSource]="users" class="mat-elevation-z8">
     <ng-container matColumnDef="username">
       <th mat-header-cell *matHeaderCellDef>Username</th>
@@ -15,10 +17,10 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-icon-button (click)="openUpdateUserModal(user)">
+        <button *appHasPermission="'EditUsers'" mat-icon-button (click)="openUpdateUserModal(user)">
           <mat-icon>edit</mat-icon>
         </button>
-        <button mat-icon-button (click)="deleteUser(user.id)">
+        <button *appHasPermission="'DeleteUsers'" mat-icon-button (click)="deleteUser(user.id)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
