--- a/src/app/products/product-inventory/product-inventory.component.html
+++ b/src/app/products/product-inventory/product-inventory.component.html
@@ -75,6 +75,10 @@
   </div>
   <div style="overflow-x: auto;margin-top: 20px;">
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
+        <td mat-cell *matCellDef="let product">{{ product.id }}</td>
+      </ng-container>
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
         <td mat-cell *matCellDef="let product">{{ product.name }}</td>
