--- a/src/app/shared/components/notification/notification.component.scss
+++ b/src/app/shared/components/notification/notification.component.scss
@@ -1,17 +1,17 @@
 .notification-link {
   text-decoration: none;
-  color: var(--mat-sys-on-surface); /* Material metin rengi */
+  color: var(--mat-sys-on-surface);
   font-weight: bold;
   transition: color 0.3s ease;
 
   &:hover {
-    color: var(--mat-sys-primary); /* Hover durumunda Material primary rengi */
+    color: var(--mat-sys-primary);
   }
 }
 
 .notification-container {
   position: fixed;
-  top: 16px;
+  top: 20px;
   right: 25px;
   z-index: 1000;
 
@@ -22,8 +22,6 @@
     color: var(--mat-sys-on-surface);
     padding: 8px 12px;
     cursor: pointer;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
 
     &:hover {
       background-color: var(--mat-sys-primary-container);
