--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login-container">
+ <div class="login-wrapper">
   <h1>Login</h1>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class="login-form">
     <mat-form-field appearance="outline" class="full-width">
@@ -25,4 +26,5 @@
       Login
     </button>
   </form>
+ </div>
 </div>
